--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zen-style",
+  "name": "zen-styled",
   "version": "0.0.1",
   "description": "Create styled components for Web, Android and iOS extremely fast.",
   "license": "MIT",
