--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zen-styled",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "description": "Create performant easy-to-use styled components for Web, iOS and Android extremely fast.",
   "license": "MIT",
   "main": "index.ts",
@@ -58,9 +58,9 @@
   },
   "devDependencies": {
     "@types/react": "^18.2.79",
-    "typescript": "^4.8.2",
     "prettier": "3.2.5",
-    "prettier-plugin-organize-imports": "^3.2.4"
+    "prettier-plugin-organize-imports": "^3.2.4",
+    "typescript": "^4.8.2"
   },
   "engines": {
     "node": ">=12.0.0"
