--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,9 @@
     "module": "commonjs",
     "esModuleInterop": true,
     "target": "es2019",
-    "declaration": false,
+    "declaration": true,
+    "pretty": true,
+    "removeComments": false,
     "sourceMap": true,
     "skipLibCheck": true,
     "outDir": "./lib"
