--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   },
   "homepage": "https://github.com/lestercorderomurillo/xpertjs-styled#readme",
   "dependencies": {
+    "@types/react": "^18.3.3",
     "react": "^18.3.1",
     "react-native": "^0.74.1",
     "type-fest": "^4.18.2",
