--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "xp.js-styled",
   "version": "0.2.1",
-  "description": "Create and iterate performant easy-to-use styled components for Web, iOS and Android.",
+  "description": "Build performant styled components for Web, iOS and Android.",
   "license": "MIT",
   "main": "index.ts",
   "types": "lib/index.d.ts",
@@ -32,7 +32,7 @@
     "build": "tsc",
     "format": "yarn prettier . --write",
     "reset": "git reset --hard origin/main",
-    "release": "yarn format && bash ./release.sh"
+    "release": "bash ./scripts/release.sh"
   },
   "prettier": {
     "printWidth": 140,
@@ -57,9 +57,9 @@
     "yarn": "^1.22.22"
   },
   "devDependencies": {
+    "typescript": "^4.8.2",
     "prettier": "3.2.5",
-    "prettier-plugin-organize-imports": "^3.2.4",
-    "typescript": "^4.8.2"
+    "prettier-plugin-organize-imports": "^3.2.4"
   },
   "engines": {
     "node": ">=12.0.0"
