--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xp.js-styled",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "Build performant styled components for Web, iOS and Android.",
   "license": "MIT",
   "main": "index.ts",
@@ -57,9 +57,9 @@
     "yarn": "^1.22.22"
   },
   "devDependencies": {
-    "typescript": "^4.8.2",
     "prettier": "3.2.5",
-    "prettier-plugin-organize-imports": "^3.2.4"
+    "prettier-plugin-organize-imports": "^3.2.4",
+    "typescript": "^4.8.2"
   },
   "engines": {
     "node": ">=12.0.0"
