--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xp.js-styled",
-  "version": "0.7.4",
+  "version": "0.8.0",
   "description": "Build performant styled components for Web, iOS and Android platforms.",
   "license": "MIT",
   "main": "index.ts",
@@ -32,7 +32,8 @@
     "build": "tsc",
     "format": "yarn prettier . --write",
     "reset": "git reset --hard origin/main",
-    "release": "bash ./scripts/release.sh"
+    "release": "bash ./scripts/release.sh",
+    "test": "vitest"
   },
   "prettier": {
     "printWidth": 140,
@@ -50,16 +51,17 @@
   },
   "homepage": "https://github.com/lestercorderomurillo/xp.js-styled#readme",
   "dependencies": {
-    "@types/react": "^18.3.3",
     "react": "^18.3.1",
-    "react-native": "^0.74.1",
-    "type-fest": "^4.18.2",
-    "yarn": "^1.22.22"
+    "react-native": "^0.74.1"
   },
   "devDependencies": {
+    "@types/react": "^18.3.3",
+    "jest": "^29.7.0",
     "prettier": "3.2.5",
     "prettier-plugin-organize-imports": "^3.2.4",
-    "typescript": "^4.8.2"
+    "type-fest": "^4.18.2",
+    "typescript": "^4.8.2",
+    "vitest": "^2.1.3"
   },
   "engines": {
     "node": ">=12.0.0"
