--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "jsx": "react-native",
-    "module": "commonjs",
+    "module": "nodenext",
     "esModuleInterop": true,
     "target": "es2019",
     "declaration": true,
