--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-native": "^0.74.1"
   },
   "devDependencies": {
+    "@testing-library/react-native": "^13.0.1",
     "@types/react": "^18.3.3",
     "jest": "^29.7.0",
     "prettier": "3.2.5",
